<resources>
    <string name="app_name">My App</string>
    <string name="insira_seu_email">Insira seu email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="bot_o_de_chat_da_galeria">Botão de chat da galeria</string>
    <string name="mensagem">Small plates, salads and sandwiches as intimate settins with 12 indoors seats plus patio seating</string>
</resources>